--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-crypto-signal-bot/
-├── .github/workflows/
-│   └── crypto_scanner.yml
-├── src/
-│   ├── crypto_analyzer.py
-│   ├── signal_generator.py
-│   ├── telegram_sender.py
-│   ├── signal_tracker.py
-│   └── config.py
-├── data/
-│   └── signals.json
-└── requirements.txt
+requests
+pandas
+numpy
+python-telegram-bot
+ta
+pytz
