--- a/.github/workflows/crypto_scanner.yml
+++ b/.github/workflows/crypto_scanner.yml
@@ -2,8 +2,8 @@ name: Crypto Signal Generator
 
 on:
   schedule:
-    - cron: '0 */2 * * *'  # هر 2 ساعت
-    - cron: '0 */4 * * *'  # هر 4 ساعت برای گزارش وضعیت
+    - cron: ''  # هر 2 ساعت
+    - cron: ''  # هر 4 ساعت برای گزارش وضعیت
 
   workflow_dispatch:  # برای اجرای دستی
 
