--- a/.github/workflows/crypto_scanner.yml
+++ b/.github/workflows/crypto_scanner.yml
@@ -23,14 +23,14 @@ jobs:
         run: pip install -r requirements.txt
         
       - name: Run crypto analyzer
-        if: github.event.schedule != '0 */4 * * *'  # فقط در زمان‌بندی 2 ساعته اجرا شود
+        if: github.event.schedule != ''  # فقط در زمان‌بندی 2 ساعته اجرا شود
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python src/crypto_analyzer.py
         
       - name: Run signal status reporter
-        if: github.event.schedule == '0 */4 * * *'  # فقط در زمان‌بندی 4 ساعته اجرا شود
+        if: github.event.schedule == ''  # فقط در زمان‌بندی 4 ساعته اجرا شود
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
